Fixed change icon vertical alignment.

--- a/app/assets/stylesheets/components/changeIcon.scss
+++ b/app/assets/stylesheets/components/changeIcon.scss
@@ -1,5 +1,5 @@
 .changeIcon {
   max-width: 100%;
   max-height: 100%;
-  vertical-align: -8%;
+  vertical-align: -27%;
 }
